assembler/lexer/asm6502/ast/asm6502Parser.cpp

#include <stdio.h>
#include <stdlib.h>


// Generated from asm6502.g4 by ANTLR 4.7


#include "asm6502Visitor.h"

#include "asm6502Parser.h"


using namespace antlrcpp;
using namespace antlr4;

asm6502Parser::asm6502Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

asm6502Parser::~asm6502Parser() {
  delete _interpreter;
}

std::string asm6502Parser::getGrammarFileName() const {
  return "asm6502.g4";
}

const std::vector<std::string>& asm6502Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& asm6502Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

asm6502Parser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> asm6502Parser::ProgContext::EOL() {
  return getTokens(asm6502Parser::EOL);
}

tree::TerminalNode* asm6502Parser::ProgContext::EOL(size_t i) {
  return getToken(asm6502Parser::EOL, i);
}

std::vector<asm6502Parser::LineContext *> asm6502Parser::ProgContext::line() {
  return getRuleContexts<asm6502Parser::LineContext>();
}

asm6502Parser::LineContext* asm6502Parser::ProgContext::line(size_t i) {
  return getRuleContext<asm6502Parser::LineContext>(i);
}


size_t asm6502Parser::ProgContext::getRuleIndex() const {
  return asm6502Parser::RuleProg;
}

antlrcpp::Any asm6502Parser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm6502Visitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

asm6502Parser::ProgContext* asm6502Parser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, asm6502Parser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(31);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << asm6502Parser::T__2)
        | (1ULL << asm6502Parser::T__5)
        | (1ULL << asm6502Parser::T__7)
        | (1ULL << asm6502Parser::ASSEMBLER_INSTRUCTION)
        | (1ULL << asm6502Parser::ADC)
        | (1ULL << asm6502Parser::AND)
        | (1ULL << asm6502Parser::ASL)
        | (1ULL << asm6502Parser::BCC)
        | (1ULL << asm6502Parser::BCS)
        | (1ULL << asm6502Parser::BEQ)
        | (1ULL << asm6502Parser::BIT)
        | (1ULL << asm6502Parser::BMI)
        | (1ULL << asm6502Parser::BNE)
        | (1ULL << asm6502Parser::BPL)
        | (1ULL << asm6502Parser::BRA)
        | (1ULL << asm6502Parser::BRK)
        | (1ULL << asm6502Parser::BVC)
        | (1ULL << asm6502Parser::BVS)
        | (1ULL << asm6502Parser::CLC)
        | (1ULL << asm6502Parser::CLD)
        | (1ULL << asm6502Parser::CLI)
        | (1ULL << asm6502Parser::CLV)
        | (1ULL << asm6502Parser::CMP)
        | (1ULL << asm6502Parser::CPX)
        | (1ULL << asm6502Parser::CPY)
        | (1ULL << asm6502Parser::DEC)
        | (1ULL << asm6502Parser::DEX)
        | (1ULL << asm6502Parser::DEY)
        | (1ULL << asm6502Parser::EOR)
        | (1ULL << asm6502Parser::INC)
        | (1ULL << asm6502Parser::INX)
        | (1ULL << asm6502Parser::INY)
        | (1ULL << asm6502Parser::JMP)
        | (1ULL << asm6502Parser::JSR)
        | (1ULL << asm6502Parser::LDA)
        | (1ULL << asm6502Parser::LDY)
        | (1ULL << asm6502Parser::LDX)
        | (1ULL << asm6502Parser::LSR)
        | (1ULL << asm6502Parser::NOP)
        | (1ULL << asm6502Parser::ORA)
        | (1ULL << asm6502Parser::PHA)
        | (1ULL << asm6502Parser::PHX)
        | (1ULL << asm6502Parser::PHY)
        | (1ULL << asm6502Parser::PHP)
        | (1ULL << asm6502Parser::PLA)
        | (1ULL << asm6502Parser::PLP)
        | (1ULL << asm6502Parser::PLY)
        | (1ULL << asm6502Parser::ROL)
        | (1ULL << asm6502Parser::ROR)
        | (1ULL << asm6502Parser::RTI)
        | (1ULL << asm6502Parser::RTS)
        | (1ULL << asm6502Parser::SBC)
        | (1ULL << asm6502Parser::SEC)
        | (1ULL << asm6502Parser::SED)
        | (1ULL << asm6502Parser::SEI)
        | (1ULL << asm6502Parser::STA)
        | (1ULL << asm6502Parser::STX)
        | (1ULL << asm6502Parser::STY))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
        ((1ULL << (_la - 64)) & ((1ULL << (asm6502Parser::STZ - 64))
        | (1ULL << (asm6502Parser::TAX - 64))
        | (1ULL << (asm6502Parser::TAY - 64))
        | (1ULL << (asm6502Parser::TSX - 64))
        | (1ULL << (asm6502Parser::TXA - 64))
        | (1ULL << (asm6502Parser::TXS - 64))
        | (1ULL << (asm6502Parser::TYA - 64))
        | (1ULL << (asm6502Parser::NAME - 64))
        | (1ULL << (asm6502Parser::NUMBER - 64))
        | (1ULL << (asm6502Parser::COMMENT - 64))
        | (1ULL << (asm6502Parser::STRING - 64)))) != 0)) {
        setState(30);
        line();
      }
      setState(33);
      match(asm6502Parser::EOL);
      setState(36); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << asm6502Parser::T__2)
      | (1ULL << asm6502Parser::T__5)
      | (1ULL << asm6502Parser::T__7)
      | (1ULL << asm6502Parser::ASSEMBLER_INSTRUCTION)
      | (1ULL << asm6502Parser::ADC)
      | (1ULL << asm6502Parser::AND)
      | (1ULL << asm6502Parser::ASL)
      | (1ULL << asm6502Parser::BCC)
      | (1ULL << asm6502Parser::BCS)
      | (1ULL << asm6502Parser::BEQ)
      | (1ULL << asm6502Parser::BIT)
      | (1ULL << asm6502Parser::BMI)
      | (1ULL << asm6502Parser::BNE)
      | (1ULL << asm6502Parser::BPL)
      | (1ULL << asm6502Parser::BRA)
      | (1ULL << asm6502Parser::BRK)
      | (1ULL << asm6502Parser::BVC)
      | (1ULL << asm6502Parser::BVS)
      | (1ULL << asm6502Parser::CLC)
      | (1ULL << asm6502Parser::CLD)
      | (1ULL << asm6502Parser::CLI)
      | (1ULL << asm6502Parser::CLV)
      | (1ULL << asm6502Parser::CMP)
      | (1ULL << asm6502Parser::CPX)
      | (1ULL << asm6502Parser::CPY)
      | (1ULL << asm6502Parser::DEC)
      | (1ULL << asm6502Parser::DEX)
      | (1ULL << asm6502Parser::DEY)
      | (1ULL << asm6502Parser::EOR)
      | (1ULL << asm6502Parser::INC)
      | (1ULL << asm6502Parser::INX)
      | (1ULL << asm6502Parser::INY)
      | (1ULL << asm6502Parser::JMP)
      | (1ULL << asm6502Parser::JSR)
      | (1ULL << asm6502Parser::LDA)
      | (1ULL << asm6502Parser::LDY)
      | (1ULL << asm6502Parser::LDX)
      | (1ULL << asm6502Parser::LSR)
      | (1ULL << asm6502Parser::NOP)
      | (1ULL << asm6502Parser::ORA)
      | (1ULL << asm6502Parser::PHA)
      | (1ULL << asm6502Parser::PHX)
      | (1ULL << asm6502Parser::PHY)
      | (1ULL << asm6502Parser::PHP)
      | (1ULL << asm6502Parser::PLA)
      | (1ULL << asm6502Parser::PLP)
      | (1ULL << asm6502Parser::PLY)
      | (1ULL << asm6502Parser::ROL)
      | (1ULL << asm6502Parser::ROR)
      | (1ULL << asm6502Parser::RTI)
      | (1ULL << asm6502Parser::RTS)
      | (1ULL << asm6502Parser::SBC)
      | (1ULL << asm6502Parser::SEC)
      | (1ULL << asm6502Parser::SED)
      | (1ULL << asm6502Parser::SEI)
      | (1ULL << asm6502Parser::STA)
      | (1ULL << asm6502Parser::STX)
      | (1ULL << asm6502Parser::STY))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (asm6502Parser::STZ - 64))
      | (1ULL << (asm6502Parser::TAX - 64))
      | (1ULL << (asm6502Parser::TAY - 64))
      | (1ULL << (asm6502Parser::TSX - 64))
      | (1ULL << (asm6502Parser::TXA - 64))
      | (1ULL << (asm6502Parser::TXS - 64))
      | (1ULL << (asm6502Parser::TYA - 64))
      | (1ULL << (asm6502Parser::NAME - 64))
      | (1ULL << (asm6502Parser::NUMBER - 64))
      | (1ULL << (asm6502Parser::COMMENT - 64))
      | (1ULL << (asm6502Parser::STRING - 64))
      | (1ULL << (asm6502Parser::EOL - 64)))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

asm6502Parser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm6502Parser::CommentContext* asm6502Parser::LineContext::comment() {
  return getRuleContext<asm6502Parser::CommentContext>(0);
}

asm6502Parser::InstructionContext* asm6502Parser::LineContext::instruction() {
  return getRuleContext<asm6502Parser::InstructionContext>(0);
}

asm6502Parser::AssemblerinstructionContext* asm6502Parser::LineContext::assemblerinstruction() {
  return getRuleContext<asm6502Parser::AssemblerinstructionContext>(0);
}

asm6502Parser::LblContext* asm6502Parser::LineContext::lbl() {
  return getRuleContext<asm6502Parser::LblContext>(0);
}


size_t asm6502Parser::LineContext::getRuleIndex() const {
  return asm6502Parser::RuleLine;
}

antlrcpp::Any asm6502Parser::LineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm6502Visitor*>(visitor))
    return parserVisitor->visitLine(this);
  else
    return visitor->visitChildren(this);
}

asm6502Parser::LineContext* asm6502Parser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 2, asm6502Parser::RuleLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(42);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(38);
      comment();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(39);
      instruction();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(40);
      assemblerinstruction();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(41);
      lbl();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

asm6502Parser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm6502Parser::OpcodeContext* asm6502Parser::InstructionContext::opcode() {
  return getRuleContext<asm6502Parser::OpcodeContext>(0);
}

asm6502Parser::LabelContext* asm6502Parser::InstructionContext::label() {
  return getRuleContext<asm6502Parser::LabelContext>(0);
}

asm6502Parser::ArgumentlistContext* asm6502Parser::InstructionContext::argumentlist() {
  return getRuleContext<asm6502Parser::ArgumentlistContext>(0);
}

asm6502Parser::CommentContext* asm6502Parser::InstructionContext::comment() {
  return getRuleContext<asm6502Parser::CommentContext>(0);
}


size_t asm6502Parser::InstructionContext::getRuleIndex() const {
  return asm6502Parser::RuleInstruction;
}

antlrcpp::Any asm6502Parser::InstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm6502Visitor*>(visitor))
    return parserVisitor->visitInstruction(this);
  else
    return visitor->visitChildren(this);
}

asm6502Parser::InstructionContext* asm6502Parser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 4, asm6502Parser::RuleInstruction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == asm6502Parser::NAME) {
      setState(44);
      label();
    }
    setState(47);
    opcode();
    setState(49);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << asm6502Parser::T__2)
      | (1ULL << asm6502Parser::T__5)
      | (1ULL << asm6502Parser::T__7))) != 0) || ((((_la - 71) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 71)) & ((1ULL << (asm6502Parser::NAME - 71))
      | (1ULL << (asm6502Parser::NUMBER - 71))
      | (1ULL << (asm6502Parser::STRING - 71)))) != 0)) {
      setState(48);
      argumentlist();
    }
    setState(52);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == asm6502Parser::COMMENT) {
      setState(51);
      comment();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssemblerinstructionContext ------------------------------------------------------------------

asm6502Parser::AssemblerinstructionContext::AssemblerinstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm6502Parser::AssembleropcodeContext* asm6502Parser::AssemblerinstructionContext::assembleropcode() {
  return getRuleContext<asm6502Parser::AssembleropcodeContext>(0);
}

asm6502Parser::ArgumentContext* asm6502Parser::AssemblerinstructionContext::argument() {
  return getRuleContext<asm6502Parser::ArgumentContext>(0);
}

asm6502Parser::ArgumentlistContext* asm6502Parser::AssemblerinstructionContext::argumentlist() {
  return getRuleContext<asm6502Parser::ArgumentlistContext>(0);
}

asm6502Parser::CommentContext* asm6502Parser::AssemblerinstructionContext::comment() {
  return getRuleContext<asm6502Parser::CommentContext>(0);
}


size_t asm6502Parser::AssemblerinstructionContext::getRuleIndex() const {
  return asm6502Parser::RuleAssemblerinstruction;
}

antlrcpp::Any asm6502Parser::AssemblerinstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm6502Visitor*>(visitor))
    return parserVisitor->visitAssemblerinstruction(this);
  else
    return visitor->visitChildren(this);
}

asm6502Parser::AssemblerinstructionContext* asm6502Parser::assemblerinstruction() {
  AssemblerinstructionContext *_localctx = _tracker.createInstance<AssemblerinstructionContext>(_ctx, getState());
  enterRule(_localctx, 6, asm6502Parser::RuleAssemblerinstruction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << asm6502Parser::T__2)
      | (1ULL << asm6502Parser::T__5)
      | (1ULL << asm6502Parser::T__7))) != 0) || ((((_la - 71) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 71)) & ((1ULL << (asm6502Parser::NAME - 71))
      | (1ULL << (asm6502Parser::NUMBER - 71))
      | (1ULL << (asm6502Parser::STRING - 71)))) != 0)) {
      setState(54);
      argument();
    }
    setState(57);
    assembleropcode();
    setState(59);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << asm6502Parser::T__2)
      | (1ULL << asm6502Parser::T__5)
      | (1ULL << asm6502Parser::T__7))) != 0) || ((((_la - 71) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 71)) & ((1ULL << (asm6502Parser::NAME - 71))
      | (1ULL << (asm6502Parser::NUMBER - 71))
      | (1ULL << (asm6502Parser::STRING - 71)))) != 0)) {
      setState(58);
      argumentlist();
    }
    setState(62);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == asm6502Parser::COMMENT) {
      setState(61);
      comment();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssembleropcodeContext ------------------------------------------------------------------

asm6502Parser::AssembleropcodeContext::AssembleropcodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* asm6502Parser::AssembleropcodeContext::ASSEMBLER_INSTRUCTION() {
  return getToken(asm6502Parser::ASSEMBLER_INSTRUCTION, 0);
}


size_t asm6502Parser::AssembleropcodeContext::getRuleIndex() const {
  return asm6502Parser::RuleAssembleropcode;
}

antlrcpp::Any asm6502Parser::AssembleropcodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm6502Visitor*>(visitor))
    return parserVisitor->visitAssembleropcode(this);
  else
    return visitor->visitChildren(this);
}

asm6502Parser::AssembleropcodeContext* asm6502Parser::assembleropcode() {
  AssembleropcodeContext *_localctx = _tracker.createInstance<AssembleropcodeContext>(_ctx, getState());
  enterRule(_localctx, 8, asm6502Parser::RuleAssembleropcode);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(asm6502Parser::ASSEMBLER_INSTRUCTION);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LblContext ------------------------------------------------------------------

asm6502Parser::LblContext::LblContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm6502Parser::LabelContext* asm6502Parser::LblContext::label() {
  return getRuleContext<asm6502Parser::LabelContext>(0);
}


size_t asm6502Parser::LblContext::getRuleIndex() const {
  return asm6502Parser::RuleLbl;
}

antlrcpp::Any asm6502Parser::LblContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm6502Visitor*>(visitor))
    return parserVisitor->visitLbl(this);
  else
    return visitor->visitChildren(this);
}

asm6502Parser::LblContext* asm6502Parser::lbl() {
  LblContext *_localctx = _tracker.createInstance<LblContext>(_ctx, getState());
  enterRule(_localctx, 10, asm6502Parser::RuleLbl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    label();
    setState(67);
    match(asm6502Parser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgumentlistContext ------------------------------------------------------------------

asm6502Parser::ArgumentlistContext::ArgumentlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm6502Parser::ArgumentContext* asm6502Parser::ArgumentlistContext::argument() {
  return getRuleContext<asm6502Parser::ArgumentContext>(0);
}

asm6502Parser::ArgumentlistContext* asm6502Parser::ArgumentlistContext::argumentlist() {
  return getRuleContext<asm6502Parser::ArgumentlistContext>(0);
}


size_t asm6502Parser::ArgumentlistContext::getRuleIndex() const {
  return asm6502Parser::RuleArgumentlist;
}

antlrcpp::Any asm6502Parser::ArgumentlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm6502Visitor*>(visitor))
    return parserVisitor->visitArgumentlist(this);
  else
    return visitor->visitChildren(this);
}

asm6502Parser::ArgumentlistContext* asm6502Parser::argumentlist() {
  ArgumentlistContext *_localctx = _tracker.createInstance<ArgumentlistContext>(_ctx, getState());
  enterRule(_localctx, 12, asm6502Parser::RuleArgumentlist);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    argument();
    setState(72);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == asm6502Parser::T__1) {
      setState(70);
      match(asm6502Parser::T__1);
      setState(71);
      argumentlist();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LabelContext ------------------------------------------------------------------

asm6502Parser::LabelContext::LabelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm6502Parser::NameContext* asm6502Parser::LabelContext::name() {
  return getRuleContext<asm6502Parser::NameContext>(0);
}


size_t asm6502Parser::LabelContext::getRuleIndex() const {
  return asm6502Parser::RuleLabel;
}

antlrcpp::Any asm6502Parser::LabelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm6502Visitor*>(visitor))
    return parserVisitor->visitLabel(this);
  else
    return visitor->visitChildren(this);
}

asm6502Parser::LabelContext* asm6502Parser::label() {
  LabelContext *_localctx = _tracker.createInstance<LabelContext>(_ctx, getState());
  enterRule(_localctx, 14, asm6502Parser::RuleLabel);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    name();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgumentContext ------------------------------------------------------------------

asm6502Parser::ArgumentContext::ArgumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<asm6502Parser::NumberContext *> asm6502Parser::ArgumentContext::number() {
  return getRuleContexts<asm6502Parser::NumberContext>();
}

asm6502Parser::NumberContext* asm6502Parser::ArgumentContext::number(size_t i) {
  return getRuleContext<asm6502Parser::NumberContext>(i);
}

asm6502Parser::NameContext* asm6502Parser::ArgumentContext::name() {
  return getRuleContext<asm6502Parser::NameContext>(0);
}

asm6502Parser::StringContext* asm6502Parser::ArgumentContext::string() {
  return getRuleContext<asm6502Parser::StringContext>(0);
}

asm6502Parser::PrefixContext* asm6502Parser::ArgumentContext::prefix() {
  return getRuleContext<asm6502Parser::PrefixContext>(0);
}

asm6502Parser::ArgumentContext* asm6502Parser::ArgumentContext::argument() {
  return getRuleContext<asm6502Parser::ArgumentContext>(0);
}


size_t asm6502Parser::ArgumentContext::getRuleIndex() const {
  return asm6502Parser::RuleArgument;
}

antlrcpp::Any asm6502Parser::ArgumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm6502Visitor*>(visitor))
    return parserVisitor->visitArgument(this);
  else
    return visitor->visitChildren(this);
}

asm6502Parser::ArgumentContext* asm6502Parser::argument() {
  ArgumentContext *_localctx = _tracker.createInstance<ArgumentContext>(_ctx, getState());
  enterRule(_localctx, 16, asm6502Parser::RuleArgument);
  size_t _la = 0;
